cmake_minimum_required(VERSION 3.27)
project(EstruturaDeDadosIFAM1 C)

set(CMAKE_C_STANDARD 11)

add_executable(EstruturaDeDadosIFAM1
        Conceitos-C-Cpp/AlocacaoMemoria/Malloctraining.c
        Conceitos-C-Cpp/Arquivos/AberturaArquivo.c
        Conceitos-C-Cpp/EX1/Ex1.c
        Conceitos-C-Cpp/EX2/Ex2.c
        Conceitos-C-Cpp/ExRecursividadeFatorial.c/ExRecursividadeFatorial.c
        Conceitos-C-Cpp/JogoDaVelha/JogoDaVelha.c
        Conceitos-C-Cpp/Loteria/Loteria.c
        ListaEx/Lista1/Q1.c)
